fix: z-index issues in firefox

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -55,7 +55,6 @@
     /* background: theme('colors.black'); */
     box-shadow: -8px 0 0 theme("colors.black");
     position: relative;
-    z-index: 1;
   }
 
   .flowing-title-fancy::before {
@@ -103,6 +102,7 @@
 .hero .hero-image {
   @apply absolute top-0 right-4;
   width: 250px;
+  z-index: -1;
 }
 
 .hero .hero-titles {
